[package]
name = "router_reboot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "cookies"] }
regex = "1"
lazy_static = "1.4"
dotenv_codegen = "0.15"
quick-xml = { version = "0.26", features = ["serialize"] }

