[package]
name = "router_reboot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json", "cookies"] }
regex = "1"
lazy_static = "1.4"
dotenv_codegen = "0.15"
quick-xml = { version = "0.26", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
ring = "0.16"
hex = "0.4"
reqwest_cookie_store = "0.4"
cookie_store = "0.16.0"
url = "2.3"
chrono = "0.4"
ctr = "0.9"
aes = "0.8"
inout = { version = "0.1", features = ["block-padding", "std"] }
md-5 = "0.10"
sha2 = "0.10"
hmac = "0.12"

